Run failsafe plugin in AWT headless mode to avoid focus stealing. Increase max memory parameters.